[gd_scene load_steps=2 format=3 uid="uid://cdgppgbx7qwry"]

[ext_resource type="Script" uid="uid://dejnw08g5t2t4" path="res://scenes/RanchScreen.gd" id="1_htjcf"]

[node name="RanchScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_htjcf")

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_top = 40.0
offset_right = 45.0
offset_bottom = 71.0
text = "Back"

[node name="AddCreatureButton" type="Button" parent="."]
layout_mode = 0
offset_right = 39.0
offset_bottom = 31.0
text = "Add"

[node name="DungeonLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 120.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 43.0
text = "Dungeon"

[node name="DungeonOption" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 120.0
offset_top = 50.0
offset_right = 260.0
offset_bottom = 81.0

[node name="PartyLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 120.0
offset_top = 90.0
offset_right = 240.0
offset_bottom = 113.0
text = "Party (max 3)"

[node name="CreatureList" type="ItemList" parent="."]
layout_mode = 0
offset_left = 120.0
offset_top = 120.0
offset_right = 360.0
offset_bottom = 288.0
auto_width = true
auto_height = true
select_mode = 2
item_count = 1

[node name="StartBattleButton" type="Button" parent="."]
layout_mode = 0
offset_left = 120.0
offset_top = 300.0
offset_right = 240.0
offset_bottom = 331.0
text = "Start Battle"

[node name="FeedbackLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 120.0
offset_top = 340.0
offset_right = 420.0
offset_bottom = 363.0
text = ""
